testsuite/tests/rename/should_fail/RnStaticPointersFail02.stderr

RnStaticPointersFail02.hs:5:12: error:
    • Illegal term-level use of the type constructor or class ‘T’
    • defined at RnStaticPointersFail02.hs:7:1
    • In the body of a static form: T
      In the expression: static T
      In an equation for ‘f’: f = static T
